# translate

./: .env.dev  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.test  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: download.py  history.py  jobs.py  router.py  upload.py
backend/app/api/v1/admin/: audit.py  capacity.py  glossary.py  jobs.py  quotas.py  reports.py  settings.py  users.py
backend/app/core/: auth.py  capacity.py  priority.py  queue.py  quota.py  quota_tracker.py  rate_limit.py  sse.py
backend/app/models/: __init__.py  audit.py  glossary.py  job.py  quota.py  user.py
backend/app/services/: glossary.py  notification.py  pdf_translator.py  pdf_validator.py  storage.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_api.py  test_e2e_flow.py  test_upload_flow.py
backend/tests/load/: test_concurrent_users.py
backend/tests/unit/: test_auth.py  test_capacity.py  test_config.py  test_e2e_sse_flow.py  test_glossary.py  test_main.py  test_models.py  test_pdf_validator.py  test_priority.py  test_quota.py  test_quota_tracker.py  test_rate_limit.py  test_sse.py  test_storage.py  test_translator.py
docs/plans/: 2026-03-18-faz1-temel-ceviri-mvp.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: TranslationPanel.test.tsx  UploadZone.test.tsx  api.test.ts  useSSE.test.ts
frontend/e2e/: sse-realtime.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useSSE.ts
scripts/: download_model.sh  mock_backend.py  mock_vllm.py  seed_glossary.py  test_backend.sh  test_e2e_sse.py  test_sse_direct.py
(+10 files in other folders)
